--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,4 +42,9 @@
         text: 'Click to edit'
     }
 });</script>
+
+<script type="text/javascript" src="assets/javascripts/google-map.js"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDdlY6WfwXkSemxbd5xE4j3ZetynH5wMzk" type="text/javascript"></script>
+    <script type="text/javascript" src="assets/javascripts/email.js"></script>
+    <script type="text/javascript" src="assets/javascripts/main.js"></script>
 </html>
