--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -57,11 +57,110 @@
         <h2 class="mrg-btm-30 mrg-top-70"><%= sanitize @titre1_about1, tags: %w(strong em a), attributes: %w(href) %></h2>
         <p class="mrg-btm-30"><%= sanitize @texte1_about1, tags: %w(strong em a), attributes: %w(href) %></p>
       </div>
-      <div class="col-md-offset-1 col-md-5 image1_about1">
+      <div class="col-md-offset-1 col-md-5">
         <%= @image1_about1.html_safe %>
       </div>
     </div>
   </div>
 </section>
 
+<!-- Promo Start -->
+<section class="section-3 bg fixed-bg dark-overlay" style="background-image:url(assets/images/bg-32.jpg)">
+  <div class="container">
+    <div class="text-center">
+      <h1><span class="font-weight-light">Investing solutions lead by</span> safety, perspicuity & honesty</h1>
+    </div>
+  </div>
+</section>
+<!-- Promo End -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+<section class="map map-md">
+      <div id="google-map" class="google-map"></div>
+    </section>
+        <!-- Map End -->
+
+
+        <!-- Contact Start -->
+    <section class="section-1">
+            <div class="container">
+                <div class="row">
+                  <div class="text-center mrg-btm-50">
+            <h2 class="heading-1 text-center">Contact Us</h2>
+            <p class="width-40 mrg-horizon-auto">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC.</p>
+          </div>
+
+          <div class="col-md-4 col-md-offset-1">
+            <p>
+              <b class="text-dark">Contact Number:</b>
+              <span>021-234-8888</span>
+            </p>
+            <p>
+              <b class="text-dark">Email Adress:</b>
+              <span>your@email.com</span>
+            </p>
+            <div class="row mrg-top-30">
+              <div class="col-md-9">
+                <p class="font-size-17 text-dark"><b>Adress</b></p>
+                <p>74 5th Avenueat St. Marks Place Brooklyn, NY 11217</p>
+              </div>
+            </div>
+            <div class="row mrg-top-30">
+              <div class="col-md-9">
+                <p class="font-size-17 text-dark"><b>Office Hours</b></p>
+                <ul>
+                  <li class="text-gray mrg-btm-5">Weekdays  <span class="mrg-left-10">5am – 11pm</span></li>
+                  <li class="text-gray mrg-btm-5">Weekends  <span class="mrg-left-10">Closed</span></li>
+                </ul>
+              </div>
+            </div>
+            <ul class="social-btn mrg-top-30">
+              <li><a class="btn icon-btn-md btn-dark-inverse hover-facebook border-radius-round" href="javascript:void(0);"><i class="ei ei-facebook"></i></a></li>
+              <li><a class="btn icon-btn-md btn-dark-inverse hover-twitter border-radius-round" href="javascript:void(0);"><i class="ei ei-twitter"></i></a></li>
+              <li><a class="btn icon-btn-md btn-dark-inverse hover-google-plus border-radius-round" href="javascript:void(0);"><i class="ei ei-google-plus"></i></a></li>
+            </ul>
+          </div>
+          <div class="col-md-7">
+            <form class="contact-form-wrapper"  name="contactForm" id='contact_form' method="post" action='assets/php/email.php'>
+              <div class="row">
+                <div class="form-group col-md-6">
+                  <input type="text" class="form-control" name="name" placeholder="Name">
+                </div>
+                <div class="form-group col-md-6">
+                  <input type="email" class="form-control input-email fill-this" name="email" placeholder="Email">
+                </div>
+                <div class="form-group col-md-12">
+                  <input type="text" class="form-control" name="subject" placeholder="Subject">
+                </div>
+                <div class="form-group col-md-12">
+                  <textarea class="form-control" name="message" rows="3" placeholder="Meassage"></textarea>
+                </div>
+                <div class="form-group col-md-12">
+                  <div id="mail_success" class="success" style="display:none;">
+                    Thank You ! Your email has been delivered.
+                  </div>
+                  <div id="mail_fail" class="error" style="display:none;">
+                    An error occured, please try again later !
+                  </div>
+                </div>
+                <div class="form-group col-md-12" id="submit">
+                  <input class="btn btn-md btn-dark" type="submit" id="send_message" value="Send Message">
+                </div>
+              </div>
+            </form>
+          </div>
+                </div>
+            </div>
+        </section>
 
