--- a/app/views/homes/_form.html.erb
+++ b/app/views/homes/_form.html.erb
@@ -68,6 +68,13 @@
         </div>
       </div>
     </section>
+    <section class="section-3 bg fixed-bg dark-overlay" style="background-image:url(assets/images/bg-32.jpg)">
+      <div class="container">
+        <div class="text-center">
+          <h1><span class="font-weight-light"><%= f.text_area :cta1, class: 'editable' %></h1>
+        </div>
+      </div>
+    </section>
     <%= f.button :submit %>
   </div>
 <% end %>
