--- a/app/views/faqs/_form.html.erb
+++ b/app/views/faqs/_form.html.erb
@@ -5,6 +5,247 @@
   </div>
 
   <div class="form-actions">
+        <section class="page-tittle page-tittle-lg parallax-bg dark-overlay">
+      <img class="parallax-img no-mobile-parallax" src="assets/images/bg-18.jpg" alt="" data-parallax='{"y": 150}'>
+      <div class="container">
+        <div class="page-tittle-head">
+          <h2><%= f.text_area :titre1, class: 'editable' %></h2>
+          <p><%= f.text_area :sous_titre1, class: 'editable' %></p>
+        </div>
+      </div>
+    </section>
+        <!-- Page Tittle End -->
+
+
+        <!-- Media Start -->
+    <section class="section-1">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <div class="card padding-30">
+              <h2 class="mrg-btm-20 pdd-left-10"><%= f.text_area :titre1_bloc1, class: 'editable' %></h2>
+              <div class="panel-group" id="accordion">
+                <div class="panel">
+                  <div class="panel-heading">
+                    <span class="panel-title">
+                    <a data-toggle="collapse" data-parent="#accordion" href="#collapse1" aria-expanded="false" class="collapsed">
+                    <%= f.text_area :question1_bloc1, class: 'editable' %></a>
+                    </span>
+                  </div>
+                  <div id="collapse1" class="panel-collapse collapse" aria-expanded="false" style="height: 0px;">
+                    <div class="panel-body">
+                    <p><%= f.text_area :reponse1_bloc1, class: 'editable' %></p></div>
+                  </div>
+                </div>
+                <div class="panel">
+                  <div class="panel-heading">
+                    <span class="panel-title">
+                    <a data-toggle="collapse" class="collapsed" data-parent="#accordion" href="#collapse2" aria-expanded="false">
+                    <%= f.text_area :question2_bloc1, class: 'editable' %></a>
+                    </span>
+                  </div>
+                  <div id="collapse2" class="panel-collapse collapse" aria-expanded="false">
+                    <div class="panel-body">
+                    <p><%= f.text_area :reponse2_bloc1, class: 'editable' %></p></div>
+                  </div>
+                </div>
+                <div class="panel">
+                  <div class="panel-heading">
+                    <span class="panel-title">
+                    <a data-toggle="collapse" class="collapsed" data-parent="#accordion" href="#collapse3" aria-expanded="false">
+                    <%= f.text_area :question3_bloc1, class: 'editable' %></a>
+                    </span>
+                  </div>
+                  <div id="collapse3" class="panel-collapse collapse" aria-expanded="false">
+                    <div class="panel-body">
+                    <p><%= f.text_area :reponse3_bloc1, class: 'editable' %></p></div>
+                  </div>
+                </div>
+                <div class="panel">
+                  <div class="panel-heading">
+                    <span class="panel-title">
+                    <a data-toggle="collapse" class="collapsed" data-parent="#accordion" href="#collapse4" aria-expanded="false">
+                    <%= f.text_area :question4_bloc1, class: 'editable' %></a>
+                    </span>
+                  </div>
+                  <div id="collapse4" class="panel-collapse collapse" aria-expanded="false">
+                    <div class="panel-body">
+                    <p><%= f.text_area :reponse4_bloc1, class: 'editable' %></p></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="card padding-30">
+              <h2 class="mrg-btm-20 pdd-left-10"><%= f.text_area :titre1_bloc2, class: 'editable' %></h2>
+              <div class="panel-group" id="accordion2">
+                <div class="panel">
+                  <div class="panel-heading">
+                    <span class="panel-title">
+                    <a data-toggle="collapse" data-parent="#accordion2" href="#collapse5" aria-expanded="false" class="collapsed">
+                    <%= f.text_area :question1_bloc2, class: 'editable' %></a>
+                    </span>
+                  </div>
+                  <div id="collapse5" class="panel-collapse collapse" aria-expanded="false" style="height: 0px;">
+                    <div class="panel-body">
+                    <p><%= f.text_area :reponse1_bloc2, class: 'editable' %></p></div>
+                  </div>
+                </div>
+                <div class="panel">
+                  <div class="panel-heading">
+                    <span class="panel-title">
+                    <a data-toggle="collapse" class="collapsed" data-parent="#accordion2" href="#collapse6" aria-expanded="false">
+                    <%= f.text_area :question2_bloc2, class: 'editable' %></a>
+                    </span>
+                  </div>
+                  <div id="collapse6" class="panel-collapse collapse" aria-expanded="false">
+                    <div class="panel-body">
+                    <p><%= f.text_area :reponse2_bloc2, class: 'editable' %></p></div>
+                  </div>
+                </div>
+                <div class="panel">
+                  <div class="panel-heading">
+                    <span class="panel-title">
+                    <a data-toggle="collapse" class="collapsed" data-parent="#accordion2" href="#collapse7" aria-expanded="false">
+                    <%= f.text_area :question3_bloc2, class: 'editable' %></a>
+                    </span>
+                  </div>
+                  <div id="collapse7" class="panel-collapse collapse" aria-expanded="false">
+                    <div class="panel-body">
+                    <p><%= f.text_area :reponse3_bloc2, class: 'editable' %></p></div>
+                  </div>
+                </div>
+                <div class="panel">
+                  <div class="panel-heading">
+                    <span class="panel-title">
+                    <a data-toggle="collapse" class="collapsed" data-parent="#accordion2" href="#collapse8" aria-expanded="false">
+                    <%= f.text_area :question4_bloc2, class: 'editable' %></a>
+                    </span>
+                  </div>
+                  <div id="collapse8" class="panel-collapse collapse" aria-expanded="false">
+                    <div class="panel-body">
+                    <p><%= f.text_area :reponse4_bloc2, class: 'editable' %></p></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-6">
+            <div class="card padding-30">
+              <h2 class="mrg-btm-20 pdd-left-10"><%= f.text_area :titre1_bloc3, class: 'editable' %></h2>
+              <div class="panel-group" id="accordion3">
+                <div class="panel">
+                  <div class="panel-heading">
+                    <span class="panel-title">
+                    <a data-toggle="collapse" data-parent="#accordion3" href="#collapse9" aria-expanded="false" class="collapsed">
+                    <%= f.text_area :question1_bloc3, class: 'editable' %></a>
+                    </span>
+                  </div>
+                  <div id="collapse9" class="panel-collapse collapse" aria-expanded="false" style="height: 0px;">
+                    <div class="panel-body">
+                    <p><%= f.text_area :reponse1_bloc3, class: 'editable' %></p></div>
+                  </div>
+                </div>
+                <div class="panel">
+                  <div class="panel-heading">
+                    <span class="panel-title">
+                    <a data-toggle="collapse" class="collapsed" data-parent="#accordion3" href="#collapse10" aria-expanded="false">
+                   <%= f.text_area :question2_bloc3, class: 'editable' %></a>
+                  </div>
+                  <div id="collapse10" class="panel-collapse collapse" aria-expanded="false">
+                    <div class="panel-body">
+                    <p><%= f.text_area :reponse2_bloc3, class: 'editable' %></p></div>
+                  </div>
+                </div>
+                <div class="panel">
+                  <div class="panel-heading">
+                    <span class="panel-title">
+                    <a data-toggle="collapse" class="collapsed" data-parent="#accordion3" href="#collapse11" aria-expanded="false">
+                    <%= f.text_area :question3_bloc3, class: 'editable' %></a>
+                    </span>
+                  </div>
+                  <div id="collapse11" class="panel-collapse collapse" aria-expanded="false">
+                    <div class="panel-body">
+                    <p><%= f.text_area :reponse3_bloc3, class: 'editable' %></p></div>
+                  </div>
+                </div>
+                <div class="panel">
+                  <div class="panel-heading">
+                    <span class="panel-title">
+                    <a data-toggle="collapse" class="collapsed" data-parent="#accordion3" href="#collapse12" aria-expanded="false">
+                    <%= f.text_area :question4_bloc3, class: 'editable' %></a>
+                    </span>
+                  </div>
+                  <div id="collapse12" class="panel-collapse collapse" aria-expanded="false">
+                    <div class="panel-body">
+                    <p><%= f.text_area :reponse4_bloc3, class: 'editable' %></p></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="card padding-30">
+              <h2 class="mrg-btm-20 pdd-left-10"><%= f.text_area :titre1_bloc4, class: 'editable' %></h2>
+              <div class="panel-group" id="accordion4">
+                <div class="panel">
+                  <div class="panel-heading">
+                    <span class="panel-title">
+                    <a data-toggle="collapse" data-parent="#accordion4" href="#collapse13" aria-expanded="false" class="collapsed">
+                    <%= f.text_area :question1_bloc4, class: 'editable' %></a>
+                    </span>
+                  </div>
+                  <div id="collapse13" class="panel-collapse collapse" aria-expanded="false" style="height: 0px;">
+                    <div class="panel-body">
+                    <p><%= f.text_area :reponse1_bloc4, class: 'editable' %></p></div>
+                  </div>
+                </div>
+                <div class="panel">
+                  <div class="panel-heading">
+                    <span class="panel-title">
+                    <a data-toggle="collapse" class="collapsed" data-parent="#accordion4" href="#collapse14" aria-expanded="false">
+                    <%= f.text_area :question2_bloc4, class: 'editable' %></a>
+                    </span>
+                  </div>
+                  <div id="collapse14" class="panel-collapse collapse" aria-expanded="false">
+                    <div class="panel-body">
+                    <p><%= f.text_area :reponse2_bloc4, class: 'editable' %></p></div>
+                  </div>
+                </div>
+                <div class="panel">
+                  <div class="panel-heading">
+                    <span class="panel-title">
+                    <a data-toggle="collapse" class="collapsed" data-parent="#accordion4" href="#collapse15" aria-expanded="false">
+                    <%= f.text_area :question3_bloc4, class: 'editable' %></a>
+                    </span>
+                  </div>
+                  <div id="collapse15" class="panel-collapse collapse" aria-expanded="false">
+                    <div class="panel-body">
+                    <p><%= f.text_area :reponse3_bloc4, class: 'editable' %></p></div>
+                  </div>
+                </div>
+                <div class="panel">
+                  <div class="panel-heading">
+                    <span class="panel-title">
+                    <a data-toggle="collapse" class="collapsed" data-parent="#accordion2" href="#collapse16" aria-expanded="false">
+                    <%= f.text_area :question4_bloc4, class: 'editable' %></a>
+                    </span>
+                  </div>
+                  <div id="collapse16" class="panel-collapse collapse" aria-expanded="false">
+                    <div class="panel-body">
+                    <p><%= f.text_area :reponse4_bloc4, class: 'editable' %></p></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <%= f.button :submit %>
   </div>
 <% end %>
