--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,7 @@
   <body>
     <%= yield %>
     <%= javascript_include_tag 'application' %>
+    <%= render "shared/footer" %>
   </body>
   <script src="js/medium-editor.js"></script>
   <script>var editor = new MediumEditor('.editable', {
