--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -24,7 +24,9 @@
         <div class="features-block-3">
           <i class="ei ei-insurance"></i>
           <div class="features-info">
-            <h4 class="features-tittle"><%= sanitize @titre1_bloc1, tags: %w(strong em a), attributes: %w(href) %></h4>
+            <h4 class="features-tittle">
+
+      <%= sanitize @titre1_bloc1, tags: %w(strong em a), attributes: %w(href) %></h4>
             <p><%= sanitize @texte1_bloc1, tags: %w(strong em a), attributes: %w(href) %></p>
           </div><!-- /features-info -->
         </div><!-- /features-block-3 -->
