--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
     <%= stylesheet_link_tag 'application', media: 'all' %>
   </head>
   <body>
+    <%= render "shared/header" %>
     <%= yield %>
     <%= javascript_include_tag 'application' %>
     <%= render "shared/footer" %>
